# deify

./: CMakeLists.txt  package.xml
listener/: CMakeLists.txt  package.xml
listener/src/: listener.cpp
src/: deify.cpp  orient.cpp  orientAndSpeak.cpp  speak.cpp
